UI: Fix language dropdown not showing language icons
(integrated from master branch change 9.2.1-1380-g55d6834 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/components/languages.less
+++ b/src/chrome/komodo/skin/global/components/languages.less
@@ -121,3 +121,17 @@ treechildren::-moz-tree-image(LanguageXBL),
 treechildren::-moz-tree-image(LanguageXUL) {
   list-style-image: url("koicon://ko-language/XUL");
 }
+
+toolbarbutton[anonid="statusbar-language-menu"]
+{
+  & > .toolbarbutton-icon
+  {
+    margin-right: 4px;
+  }
+  
+  .menu-iconic-left,
+  .menu-iconic-left > image
+  {
+    visibility: visible !important;
+  }
+}
